# pyiron_xzzx

./: .coveragerc  .gitattributes  .gitignore  pyproject.toml
.binder/: environment.yml  postBuild
.ci_support/: environment-old.yml  environment-postgresql.yml  environment.yml  exclude
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy.yml  postgresql.yml  push-pull.yml
docs/: README.md  conf.py  environment.yml  index.rst
notebooks/: cache_database.ipynb  example.ipynb  save_workflow.ipynb
pyiron_database/generic_storage/: __init__.py  hdf5_storage.py  interface.py  json_storage.py  pickle_storage.py
pyiron_database/instance_database/: Neo4jInstanceDatabase.py  __init__.py
pyiron_xzzx/: _version.py
pyiron_xzzx/cache_database/: __init__.py  cache_database.py  interface.py  neo4j.py  node.py
pyiron_xzzx/generic_storage/: __init__.py  dataclass_helpers.py  hdf5_storage.py  interface.py  json_storage.py  pickle_storage.py
pyiron_xzzx/instance_database/: InstanceDatabase.py  Neo4jInstanceDatabase.py  PostgreSQLInstanceDatabase.py  __init__.py  node.py
pyiron_xzzx/obj_reconstruction/: __init__.py  util.py
tests/benchmark/: test_benchmark.py
tests/integration/: test_postgresql.py  test_readme.py
tests/unit/: test_generic_storage.py  test_tests.py
