[build-system]
requires = [
    "pyiron_workflow",
    "setuptools",
    "versioneer[toml]==0.29",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyiron_xzzx"
description = "pyiron_xzzx - Your pyiron-like module."
readme = "docs/README.md"
keywords = [ "pyiron",]
requires-python = ">=3.9, <3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyiron_workflow"
]
dynamic = [ "version",]
authors = [
    { name = "Lorem Ipsum", email = "lorem@ipsum.com" },
]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://pyiron.org/"
Documentation = "https://pyiron_xzzx.readthedocs.io"
Repository = "https://github.com/pyiron/pyiron_xzzx"

[tool.versioneer]
VCS = "git"
style = "pep440-pre"
versionfile_source = "pyiron_xzzx/_version.py"
parentdir_prefix = "pyiron_xzzx"
tag_prefix = "pyiron_xzzx-"

[tool.setuptools.packages.find]
include = [ "pyiron_xzzx*",]

[tool.setuptools.dynamic.version]
attr = "pyiron_xzzx.__version__"

[tool.ruff]
exclude = ["docs/conf.py", "setup.py", "pyiron_xzzx/_version.py"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-comprehensions
    "C4",
    # eradicate
    "ERA",
    # pylint
    "PL",
]
ignore = [
    # ignore line-length violations
    "E501",
    # Too many arguments in function definition
    "PLR0913",
    # Magic value used in comparison
    "PLR2004",
    # Import alias does not rename original package
    "PLC0414",
    # Too many branches
    "PLR0912",
    # Too many statements
    "PLR0915",
    # Too many return statements
    "PLR0911",
]

[tool.black]
extend-exclude = '''
(
  ^/docs
)
'''

[tool.mypy]
ignore_missing_imports = true
strict = true
exclude = ['docs/conf.py', 'pyiron_xzzx/_version.py']
